--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,27 @@
-os:
-  - linux
-  - osx
-language: python
-python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
-  - "3.6"
+language: generic
+matrix:
+  include:
+    - os: linux
+      env: TRAVIS_PYTHON_VERSION=2.7
+    - os: linux
+      env: TRAVIS_PYTHON_VERSION=3.4
+    - os: linux
+      env: TRAVIS_PYTHON_VERSION=3.5
+    - os: linux
+      env: TRAVIS_PYTHON_VERSION=3.6
+    - os: osx
+      env: TRAVIS_PYTHON_VERSION=2.7
+    - os: osx
+      env: TRAVIS_PYTHON_VERSION=3.4
+    - os: osx
+      env: TRAVIS_PYTHON_VERSION=3.5
+    - os: osx
+      env: TRAVIS_PYTHON_VERSION=3.6
+      
 install:
-  - sudo apt-get update
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+      sudo apt-get update
+    fi
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
       wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
     else
