--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,16 @@ language: generic
 matrix:
   include:
     - os: linux
+      language: python
       env: TRAVIS_PYTHON_VERSION=2.7
     - os: linux
+      language: python
       env: TRAVIS_PYTHON_VERSION=3.4
     - os: linux
+      language: python
       env: TRAVIS_PYTHON_VERSION=3.5
     - os: linux
+      language: python
       env: TRAVIS_PYTHON_VERSION=3.6
     - os: osx
       env: TRAVIS_PYTHON_VERSION=2.7
@@ -21,7 +25,7 @@ matrix:
       
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      sudo apt-get update
+      sudo apt-get update;
     fi
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
       wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
