--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,13 @@ language: generic
 matrix:
   include:
     - os: linux
-      python: "2.7"
+      python: 2.7
     - os: linux
-      python: "3.4"
+      python: 3.4
     - os: linux
-      python: "3.5"
+      python: 3.5
     - os: linux
-      python: "3.6"
-    - os: linux
-      python: "3.7"
+      python: 3.6
     - os: osx
       env: TRAVIS_PYTHON_VERSION=2.7
     - os: osx
